<resources>
    <string name="app_name">Kora</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="slogan">Your world. Your voice.</string>
    <string name="error_invalid_email">Please enter a valid username</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_username_not_found">Username not found</string>
    <string name="error_field_required">This field is required</string>
    <string name="internet_failure_title">Connection problem</string>
    <string name="internet_failure">Make sure you are connected to the internet.</string>
    <string name="php_server_root">http://ecocollector.azurewebsites.net/</string>
    <string name="php_get_login">get_login.php/</string>
    <string name="php_get_lists">get_lists.php/</string>
    <string name="php_add_records">add_records.php/</string>
    <string name="login_server_response">Login server response: %1$s</string>
    <string name="list_server_response">List server response: %1$s</string>
    <string name="server_connection_error">Server Error: %1$s</string>
    <string name="server_password_error">do not match</string>
    <string name="server_username_error">not found</string>
    <string name="saved_login_log">Logging in with saved uuid: %1$s</string>
    <string name="new_login_log">Logging in with new uuid: %1$s</string>
    <string name="saved_logout_log">Logging out of uuid: %1$s</string>
    <string name="login_save_file">LoginPref</string>
    <string name="general_error_title">Error</string>
    <string name="general_error_report">The app has encountered an error.</string>
    <string name="load_user_vars_report">Loading user variables: %1$s</string>
    <string name="server_success">Success!</string>
    <string name="server_no_new_records">No new records detected</string>
    <string name="server_error_string">Error:</string>
    <string name="server_warning_string">Warning:</string>
    <string name="icon_description">An image for the record</string>
    <string name="upload_media">Upload media</string>
    <string name="no_upload_no_wifi">Can\'t upload media. Not connected to WiFi.</string>
    <string name="uuid_save_key">Saved_UUID</string>
    <string name="logout_flag">Logout</string>
    <string name="save_login_failure">Failed to save login: %1$s</string>
    <string name="load_login_failure">Failed to load login: %1$s</string>
    <string name="user_vars_file_prefix">UserVars-</string>
    <string name="save_user_vars_failure">Failed to save user variables: %1$s</string>
    <string name="load_user_vars_failure">Failed to load user variables: %1$s</string>
    <string name="record_file_prefix">Records-</string>
    <string name="save_record_report">Saving records: %1$d</string>
    <string name="save_record_failure">Failed to save records: </string>
    <string name="load_record_report">Loading records: %1$d</string>
    <string name="load_record_failure">Failed to load records: %1$s</string>
    <string name="io_success">Success</string>
    <string name="json_encode_error">"Error encoding json object: %1$s"</string>
    <string name="json_decode_error">"Error decoding json object: %1$s"</string>
    <string name="general_error_prefix">Error: %1$s</string>
    <string name="user_vars_save_success">User variables %1$s saved to %2$s</string>
    <string name="add_new_user_var_entry">Adding new %1$s: %2$s</string>
    <string name="create_file_fail">Could not create file: %1$s</string>
    <string name="create_file_success">Created file: %1$s</string>
    <string name="media_upload_complete">Finished uploading medias</string>
    <string name="start_new_record">Starting new add %1$s activity</string>
    <string name="enter_name_hint">Enter a name for this %1$s</string>
    <string name="default_name_button">Use default name</string>
    <string name="access_header">Access levels</string>
    <string name="measured_header">Measured item</string>
    <string name="value_header">Value</string>
    <string name="value_hint">Enter the value of the measurement</string>
    <string name="unit_header">Units</string>
    <string name="note_header">Note (optional)</string>
    <string name="note_header_required">Note</string>
    <string name="tags_header">Tags</string>
    <string name="add_button_string">+</string>
    <string name="default_name">%1$s - %2$s</string>
    <string name="adding_record">Adding new record</string>
    <string name="measurement_name_tag">measurement</string>
    <string name="note_name_tag">note</string>
    <string name="photo_name_tag">photo</string>
    <string name="record_missing_data">Record is missing required data</string>
    <string name="field_required">The %1$s field is required</string>
    <string name="name_field_string">Name</string>
    <string name="tag_field_string">Tags</string>
    <string name="access_field_string">Access</string>
    <string name="spec_field_string">Measured item</string>
    <string name="unit_field_string">Units</string>
    <string name="note_field_string">Note</string>
    <string name="photo_field_string">Photo</string>
    <string name="wrong_number_format">Please enter a valid number</string>
    <string name="photo_button_description">Choose a photo from the gallery, or take a new one.</string>
    <string name="camera_start">Camera activity started</string>
    <string name="camera_cancel">Camera activity canceled</string>
    <string name="start_old_record">Starting activity to edit %1$s record</string>
    <string name="available_label">Available</string>
    <string name="selected_label">Selected</string>
    <string name="add_new">Add new %1$s</string>
    <string name="no_mode_error">Mode not set</string>
    <string name="missing_entry_in_list">List %1$s is missing value %2$s</string>
    <string name="search_hint">Search for %1$s</string>
    <string name="access_string">access level</string>
    <string name="species_string">measured item</string>
    <string name="units_string">unit</string>
    <string name="tags_string">tag</string>
    <string name="generic_string">item</string>
    <string name="play_services_connection_failure">Connection to Play Services failed: %1$s</string>
    <string name="last_location_retrieve_failure">Could not retrieve user initial location: %1$s</string>
    <string name="start_location_updates_report">Requesting location updates: %1$b</string>
    <string name="requesting_settings_change">Requesting settings change: %1$s</string>
    <string name="settings_change_error">Can not update user settings: %1$s</string>
    <string name="location_updates_start">Starting location updates</string>
    <string name="location_updates_stop">Stopping location updates</string>
    <string name="location_updates_start_error">Error starting location updates: %1$s</string>
    <string name="no_user_location_found">Location not found. Sending to null island.</string>
    <string name="last_location_null">The last location object is empty</string>
    <string name="gps_acc_starter">Current GPS Accuracy:</string>
    <string name="gps_stab_starter">Current GPS Stability:</string>
    <string name="gps_w_unit">%1$s m</string>
    <string name="logged_in_text_string">%1$s</string>
    <string name="save_button_string">Save</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="new_meas">New Measurement</string>
    <string name="new_note">New Note</string>
    <string name="new_photo">New Photo</string>
    <string name="sync_string">Sync</string>
    <string name="delete_string">Delete record</string>
    <string name="add_default_string">Set as default</string>
    <string name="remove_default_string">Remove from defaults</string>
    <string name="title_constructor">%1$s %2$s</string>
    <string name="title_constructor_new">New</string>
    <string name="title_constructor_editing">Edit</string>
    <string name="settings_string">Settings</string>
    <string name="no_location_found">Your location was not found.\n\n</string>
    <string name="location_error_starter">Your location may not be accurate.\n\n</string>
    <string name="old_location_error_message">Last location update: %1$s minutes ago.\n\n</string>
    <string name="inaccurate_location_error_message">Current accuracy: %1$s.\n\n</string>
    <string name="unstable_location_error_message">Current stability: %1$s.\n\n</string>
    <string name="location_error_ending">Please wait until the GPS is stable.</string>
    <string name="old_location_wait_option">Wait</string>
    <string name="old_location_use_option">Ignore</string>
    <string name="gps_locking">Locking</string>
    <string name="logout_confirmation_message">Are you sure you want to log out of Kora?</string>
    <string name="logout_positive_string">Log out</string>
    <string name="logout_negative_string">Stay</string>
    <string name="sync_confirmation_message">All records will be removed after you sync. Do you want to continue?</string>
    <string name="sync_positive_string">Sync</string>
    <string name="sync_negative_string">Cancel</string>
    <string name="cancel_confirmation_message">Are you sure you want to leave?
        All info in this record will be lost.</string>
    <string name="cancel_positive_string">Leave</string>
    <string name="cancel_negative_string">Stay</string>
    <string name="user_cancel">User canceled action.</string>
    <string name="parse_failure">Failed to parse %1$s: %2$s</string>
    <string name="parse_success">Parsed value %1$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_min_accuracy">Minimum location accuracy</string>
    <string name="pref_description_min_accuracy">The minimum location accuracy to allow</string>
    <string name="pref_default_min_accuracy">50</string>
    <string-array name="pref_min_accuracy_titles">
        <item>15 meters</item>
        <item>25 meters</item>
        <item>50 meters</item>
        <item>75 meters</item>
        <item>100 meters</item>
    </string-array>
    <string-array name="pref_min_accuracy_values">
        <item>15</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="pref_title_min_stability">Minimum location stability</string>
    <string name="pref_description_min_stability">The minimum location stability to allow</string>
    <string name="pref_default_min_stability">50</string>
    <string-array name="pref_min_stability_titles">
        <item>15 meters</item>
        <item>25 meters</item>
        <item>50 meters</item>
        <item>75 meters</item>
        <item>100 meters</item>
    </string-array>
    <string name="pref_title_max_update">Maximum location update time</string>
    <string name="pref_description_max_update">The longest time to allow between location updates</string>
    <string name="pref_max_update_default">1</string>
    <string name="pref_title_sync_startup">Sync list options on startup</string>
    <string name="pref_sync_startup_default">0</string>
    <string name="pref_title_photos_wifi">Upload photos on WiFi</string>
    <string name="pref_description_photos_wifi">Only upload photos when WiFi is available</string>
    <string name="pref_title_sync_remove">Clear records after sync</string>
    <string name="pref_description_sync_remove">Always remove records after syncing manually</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_default">-1</string>
</resources>