<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_sync_startup_default"
        android:entries="@array/pref_sync_startup_titles"
        android:entryValues="@array/pref_sync_startup_values"
        android:key="sync_startup"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_startup" />

    <ListPreference
        android:defaultValue="@string/pref_sync_frequency_default"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="photos_wifi"
        android:summary="@string/pref_description_photos_wifi"
        android:title="@string/pref_title_photos_wifi" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="sync_remove"
        android:enabled="false"
        android:summary="@string/pref_description_sync_remove"
        android:title="@string/pref_title_sync_remove" />

</PreferenceScreen>
