<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gmail.jonsege.androiddatacollection.AddNew">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title=""
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:textColor="@color/light"
            android:text="@string/new_meas"
            android:id="@+id/meas_button" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:textColor="@color/light"
            android:text="@string/new_note"
            android:id="@+id/note_button"
            android:layout_marginTop="25dip"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:textColor="@color/light"
            android:text="@string/new_photo"
            android:id="@+id/photo_button"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</RelativeLayout>
