<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gmail.jonsege.androiddatacollection.NewNote">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title=""
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_toolbar"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/meas_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_default_size"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/enter_name_hint"
                android:maxLines="1"
                android:background="?attr/actionModeBackground" />

            <Button
                android:id="@+id/defaultNameButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/font_default_size"
                android:text="@string/default_name_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/font_header_size"
                android:textColor="@color/darkBlue"
                android:text="@string/access_header"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="end|center">

                <TextView
                    android:id="@+id/accessTextField"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="@dimen/font_default_size"
                    android:text="@string/access_hint"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/accessPickerButton"
                    android:text="@string/add_button_string"
                    android:layout_width="23dp"
                    android:layout_height="30dp"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:padding="0dp"
                    android:layout_weight="0.01" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/font_header_size"
                android:textColor="@color/darkBlue"
                android:text="@string/note_header"/>

            <EditText
                android:id="@+id/notesTextField"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="@dimen/font_default_size"
                android:gravity="start|top"
                android:background="?attr/actionModeBackground"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/font_header_size"
                android:textColor="@color/darkBlue"
                android:text="@string/tags_header"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="end|center">

                <TextView
                    android:id="@+id/tagTextField"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="@dimen/font_default_size"
                    android:text="@string/tags_hint"
                    app:layout_column="0"
                    app:layout_row="0"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/tagPickerButton"
                    android:text="@string/add_button_string"
                    android:layout_width="23dp"
                    android:layout_height="30dp"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:padding="0dp"
                    android:layout_weight="0.01" />
            </LinearLayout>

            <TextView
                android:id="@+id/gpsAccView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/font_default_size"
                android:text="@string/gps_acc_starter" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
